# HW_Web_8_CRUTCH

./: pyproject.toml
HW_Web_8/: main.py
HW_Web_8/models/: models.py
HW_Web_8/seeds/: seed.py
HW_Web_8/task_rabbitMQ/: consumer.py  producer.py
