[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["Barskyi <137706923+Barskyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
certifi = "^2023.11.17"
mongoengine = "^0.27.0"
pika = "^1.3.2"
celery = "^5.3.6"
redis = "^5.0.1"
redis-lru = "^0.1.2"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
